# aviutl2-waveform-preview

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  aviutl2.toml  mise.toml  package.txt
.github/workflows/: ci.yaml  release.yaml
.zed/: settings.json
i18n/: English.waveformpreview.aul2
src/: analyzer.rs  bpm.rs  config.rs  gui.rs  lib.rs  utils.rs
