[package]
name = "aviutl2-waveform-preview"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "waveformpreview"
crate-type = ["cdylib"]

[dependencies]
aviutl2 = "0.38.0"
aviutl2-eframe = "0.38.0"
egui_plot = "0.35.0"
process_path = "0.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
